--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
                 <img class="nav__logo" src="images/Genesis_Logo.svg" alt="Genesis Logo">
             </div>
             <ul class="nav__list">
-                <li class="nav__li">Projects</li>
-                <li class="nav__li">Contact</li>
+                <li class="nav__li">
+                    <a href="projects.html">
+                        Projects
+                    </a>
+                </li>
+                <li class="nav__li">
+                    <a href="contact.html">
+                        Contact
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -77,6 +85,56 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div>
+                <table class="awards">
+                    <tr>
+                        <td>Awwwards</td>
+                        <td>Site of the day</td>
+                        <td class="awards__third-column">
+                            Genesis UI Kit
+                            Application that helps to
+                            find nearest sport
+                            centres in your area
+                        </td>
+                        <td>2018</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Best navigation</td>
+                        <td class="awards__third-column">
+                            Genesis Template
+                            Application that helps to
+                            find nearest sport
+                            centres in your area
+                        </td>
+                        <td>2018</td>
+                    </tr>
+                    <tr>
+                        <td>CSSDesignAwards</td>
+                        <td>Site of the day</td>
+                        <td class="awards__third-column">
+                            Genesis UI Kit 
+                            Application that helps to
+                            find nearest sport
+                            centres in your area
+                        </td>
+                        <td>2017</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Best navigation</td>
+                        <td class="awards__third-column">
+                            Genesis Template 
+                            Application that helps to
+                            find nearest sport
+                            centres in your area
+                        </td>
+                        <td>2016</td>
+                    </tr>
+                </table>
+            </div>
+        </section>
     </main>
     <footer>
         <nav class="nav">
@@ -86,8 +144,16 @@
             <div class="nav__rightnav">
                 <div>
                     <ul class="nav__list">
-                        <li class="nav__li">Projects</li>
-                        <li class="nav__li">Contact</li>
+                        <li class="nav__li">
+                            <a href="projects.html">
+                                Projects
+                            </a>
+                        </li>
+                        <li class="nav__li">
+                            <a href="contact.html">
+                                Contact
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="nav__social-media">
