--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css"> 
-    <title>Projects</title>
+    <title>Project Details</title>
 </head>
 <body>
     <header>
@@ -17,21 +17,29 @@
                 <img class="nav__logo" src="images/Genesis_Logo.svg" alt="Genesis Logo">
             </div>
             <ul class="nav__list">
-                <li class="nav__li">Projects</li>
-                <li class="nav__li">Contact</li>
+                <li class="nav__li">
+                    <a href="projects.html">
+                        Projects
+                    </a>
+                </li>
+                <li class="nav__li">
+                    <a href="contact.html">
+                        Contact
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-            <div>
-                <div class="project-presentation">
-                    <h2>
+            <div class="project-presentation">
+                <div class="project-presentation__text">
+                    <h2 class="project-presentation__headline">
                         A fresh new title can make all the difference!
                     </h2>
-                    <p>There are many variations of passages of Lorem Ipsum available, 
+                    <p class="project-presentation__body">There are many variations of passages of Lorem Ipsum available, 
                         but the majority have suffered alteration in some form, 
-                        by injected humour, or randomised words which don't look even slightly believable. 
+                        by injected humour, or randomised words which don't look even slightly believable. <br><br>
                         You need to be sure there isn't anything embarrassing hidden in the middle of text. 
                         All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, 
                         making this the first true generator on the Internet. 
@@ -39,11 +47,57 @@
                         combined with a handful of model sentence structures.
                     </p>
                 </div>
-                <div>TABELL</div>
+                <div class="project-presentation__table">
+                    <table>
+                        <tr>
+                            <td>Project</td>
+                            <td>Genesis Portfolio</td>
+                        </tr>
+                        <tr>
+                            <td>Design</td>
+                            <td>Bakhtiyar Sattarov</td>
+                        </tr>
+                        <tr>
+                            <td>Client</td>
+                            <td>Crarftwork</td>
+                        </tr>
+                        <tr>
+                            <td>Deliverable</td>
+                            <td>Website Design</td>
+                        </tr>
+                        <tr>
+                            <td>Year</td>
+                            <td>2018</td>
+                        </tr>
+                        <tr>
+                            <td>Field</td>
+                            <td>Branding, Personal</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </section>
         <section>
-
+            <div class="red-carpet-pic">
+                <img src="images/project-picture.png" alt="Red carpet">
+            </div>
+        </section>
+        <section>
+            <p class="project-information">
+                There are many variations of passages of Lorem Ipsum available, 
+                but the majority have suffered alteration in some form, by injected humour, 
+                or randomised words which don't look even slightly believable. 
+                If you are going to use a passage of Lorem Ipsum, 
+                You need to be sure there isn't anything embarrassing hidden in the middle of text. 
+                You need to be sure there isn't anything embarrassing hidden in the middle of text.
+            </p>
+        </section>
+        <section>
+            <div class="project-grid-container">
+                <div class="project-grid-container__first"><img src="images/project-example1.png" alt="pic1"></div>
+                <div class="project-grid-container__second"><img src="images/project-example2.png" alt="pic2"></div>
+                <div class="project-grid-container__third"><img src="images/project-example3.png" alt="pic3"></div>
+            </div>
         </section>
     </main>
     <footer>
@@ -54,8 +108,16 @@
             <div class="nav__rightnav">
                 <div>
                     <ul class="nav__list">
-                        <li class="nav__li">Projects</li>
-                        <li class="nav__li">Contact</li>
+                        <li class="nav__li">
+                            <a href="projects.html">
+                                Projects
+                            </a>
+                        </li>
+                        <li class="nav__li">
+                            <a href="contact.html">
+                                Contact
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="nav__social-media">
